Added New Components

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,12 @@
     <div class="wrapper">
       <app-root> <p>Loading...</p> </app-root>
     </div>
+
+  <script>
+    //at bottom/footer of the page
+    $(document).ready(function () {
+      $(document).trigger("resize");
+    });
+  </script>
   </body>
 </html>
