--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Smart ATM Management</title>
-    <base href=""/>
+    <base href="" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <script>
       window['jQuery'] = window['$'] = require('jquery');
     </script>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"/>
-    <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"
+    />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
+  </head>
   <body class="fixed sidebar-mini skin-blue">
     <div class="wrapper">
       <app-root> <p>Loading...</p> </app-root>
     </div>
 
+    <script src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript">
       //at bottom/footer of the page
       $(document).ready(function() {
         $(document).trigger('resize');
       });
     </script>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
+  </body>
 </html>
